Update privacy policy title and content for I-Fredom

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Политика конфиденциальности — YOUR_APP_NAME</title>
+  <title>Политика конфиденциальности — I-Fredom</title>
   <style>
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial; margin: 0; }
     main { max-width: 900px; margin: 0 auto; padding: 24px; line-height: 1.55; }
@@ -11,36 +11,67 @@
     h2 { margin-top: 28px; }
     .muted { color: #666; }
     a { color: inherit; }
+    ul { padding-left: 18px; }
   </style>
 </head>
 <body>
 <main>
-  <h1>Политика конфиденциальности YOUR_APP_NAME</h1>
+  <h1>Политика конфиденциальности I-Fredom</h1>
   <p class="muted">Дата обновления: 30 января 2026</p>
 
   <h2>1. Кто мы</h2>
-  <p>YOUR_APP_NAME (“мы”, “приложение”) — мобильное приложение для Android, предоставляющее VPN-соединение через механизм Android VpnService.</p>
+  <p>
+    I-Fredom (“мы”, “приложение”) — мобильное приложение для Android, предоставляющее VPN-соединение
+    через механизм Android <b>VpnService</b>.
+  </p>
 
-  <h2>2. Какие данные мы собираем</h2>
-  <p>Мы не собираем и не продаём персональные данные пользователей. Приложение может обрабатывать локально на устройстве данные, необходимые для работы VPN:
-  выбранный сервер, статус подключения и технические показатели качества соединения (например, пинг).</p>
+  <h2>2. Активационный ключ</h2>
+  <p>
+    Для доступа к функциональности приложения может потребоваться активационный ключ.
+    Ключ предоставляется пользователю отдельно.
+    <b>Оплата и платёжные данные в приложении не обрабатываются.</b>
+  </p>
 
-  <h2>3. Что происходит с интернет-трафиком</h2>
-  <p>При включении VPN сетевой трафик устройства направляется через VPN-туннель к выбранному серверу. Мы не используем VPN для подмены рекламы, скрытого перенаправления трафика или продажи данных.</p>
+  <h2>3. Какие данные мы собираем</h2>
+  <p>
+    Мы не собираем и не продаём персональные данные пользователей.
+    Приложение может обрабатывать <b>локально на устройстве</b> данные, необходимые для работы VPN, например:
+  </p>
+  <ul>
+    <li>выбранный сервер и технические параметры подключения;</li>
+    <li>статус VPN (включено/выключено);</li>
+    <li>технические показатели качества соединения (например, пинг).</li>
+  </ul>
 
-  <h2>4. Передача данных третьим лицам</h2>
-  <p>Мы не передаём персональные данные третьим лицам, кроме случаев, предусмотренных законом.</p>
+  <h2>4. Что происходит с интернет-трафиком</h2>
+  <p>
+    При включении VPN сетевой трафик устройства направляется через VPN-туннель к выбранному серверу.
+    Мы не используем VPN для подмены рекламы, скрытого перенаправления трафика или продажи данных.
+  </p>
 
-  <h2>5. Хранение и безопасность</h2>
-  <p>Мы применяем разумные меры для защиты данных, которые приложение хранит локально. Пользователь может удалить данные приложения стандартными средствами Android.</p>
+  <h2>5. Передача данных третьим лицам</h2>
+  <p>
+    Мы не передаём персональные данные третьим лицам, кроме случаев, предусмотренных законом.
+  </p>
 
-  <h2>6. Дети</h2>
-  <p>Приложение не предназначено для детей младше 13 лет и не собирает сознательно данные детей.</p>
+  <h2>6. Хранение и безопасность</h2>
+  <p>
+    Мы применяем разумные меры для защиты данных, которые приложение хранит локально.
+    Пользователь может удалить данные приложения стандартными средствами Android
+    (Настройки → Приложения → I-Fredom → Память → Очистить).
+  </p>
 
-  <h2>7. Изменения политики</h2>
-  <p>Мы можем обновлять эту политику. Актуальная версия всегда доступна на этой странице.</p>
+  <h2>7. Дети</h2>
+  <p>
+    Приложение не предназначено для детей младше 13 лет и не собирает сознательно данные детей.
+  </p>
 
-  <h2>8. Контакты</h2>
+  <h2>8. Изменения политики</h2>
+  <p>
+    Мы можем обновлять эту политику. Актуальная версия всегда доступна на этой странице.
+  </p>
+
+  <h2>9. Контакты</h2>
   <p>Email для связи: <a href="mailto:sup.ifreedom@gmail.com">sup.ifreedom@gmail.com</a></p>
 </main>
 </body>
