--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Политика конфиденциальности — I-Fredom</title>
   <style>
-    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial; margin: 0; }
-    main { max-width: 900px; margin: 0 auto; padding: 24px; line-height: 1.55; }
-    h1 { margin-top: 0; }
-    h2 { margin-top: 28px; }
-    .muted { color: #666; }
+    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial; margin: 0; background:#fff; color:#111; }
+    main { max-width: 920px; margin: 0 auto; padding: 24px; line-height: 1.6; }
+    h1 { margin: 0 0 8px 0; font-size: 28px; }
+    h2 { margin: 26px 0 8px 0; font-size: 18px; }
+    p { margin: 8px 0; }
+    ul { margin: 8px 0 8px 18px; }
+    .muted { color: #666; font-size: 14px; }
+    .box { background: #f6f8fa; padding: 14px 16px; border-radius: 10px; margin: 14px 0; }
     a { color: inherit; }
-    ul { padding-left: 18px; }
   </style>
 </head>
 <body>
@@ -19,59 +21,69 @@
   <h1>Политика конфиденциальности I-Fredom</h1>
   <p class="muted">Дата обновления: 30 января 2026</p>
 
-  <h2>1. Кто мы</h2>
+  <div class="box">
+    <p>
+      Услуги, предоставляемые приложением <b>I-Fredom</b> (“мы”, “Сервис”), предназначены для использования “как есть”.
+      Эта страница информирует пользователей о нашей политике в отношении обработки информации при использовании приложения.
+      Используя I-Fredom, вы соглашаетесь с положениями этой Политики.
+    </p>
+  </div>
+
+  <h2>Данные VPN</h2>
+  <p><b>Мы НЕ собираем</b> и <b>НЕ храним</b> данные вашего VPN-трафика.</p>
+  <p><b>Мы НЕ изменяем</b> содержимое VPN-трафика и <b>НЕ передаём</b> VPN-данные третьим лицам.</p>
   <p>
-    I-Fredom (“мы”, “приложение”) — мобильное приложение для Android, предоставляющее VPN-соединение
-    через механизм Android <b>VpnService</b>.
+    I-Fredom использует стандартный механизм Android <b>VpnService</b> для создания защищённого соединения.
+    При включении VPN сетевой трафик устройства направляется через VPN-туннель к выбранному серверу.
   </p>
 
-  <h2>2. Активационный ключ</h2>
+  <h2>Активационный ключ</h2>
   <p>
-    Для доступа к функциональности приложения может потребоваться активационный ключ.
+    Для доступа к функциональности приложения может потребоваться <b>активационный ключ</b>.
     Ключ предоставляется пользователю отдельно.
-    <b>Оплата и платёжные данные в приложении не обрабатываются.</b>
   </p>
+  <p><b>Оплата и платёжные данные в приложении не обрабатываются.</b> Покупки внутри приложения не осуществляются.</p>
 
-  <h2>3. Какие данные мы собираем</h2>
+  <h2>Сбор данных</h2>
   <p>
-    Мы не собираем и не продаём персональные данные пользователей.
-    Приложение может обрабатывать <b>локально на устройстве</b> данные, необходимые для работы VPN, например:
+    Мы стремимся собирать минимум данных. Приложение обрабатывает только информацию, необходимую для работы VPN.
+    Часть данных может храниться <b>локально на устройстве</b> (например, выбранный сервер и настройки).
   </p>
+  <p><b>Мы НЕ отправляем</b> аналитические данные и <b>НЕ отправляем</b> отчёты о сбоях на внешние сервисы.</p>
+
+  <h2>Какая информация может обрабатываться локально</h2>
   <ul>
     <li>выбранный сервер и технические параметры подключения;</li>
     <li>статус VPN (включено/выключено);</li>
     <li>технические показатели качества соединения (например, пинг).</li>
   </ul>
 
-  <h2>4. Что происходит с интернет-трафиком</h2>
+  <h2>Передача данных третьим лицам</h2>
   <p>
-    При включении VPN сетевой трафик устройства направляется через VPN-туннель к выбранному серверу.
-    Мы не используем VPN для подмены рекламы, скрытого перенаправления трафика или продажи данных.
+    Мы не передаём персональные данные третьим лицам, за исключением случаев, предусмотренных законом.
   </p>
 
-  <h2>5. Передача данных третьим лицам</h2>
+  <h2>Рекламные сети</h2>
+  <p>I-Fredom не показывает рекламу и не использует рекламные сети.</p>
+
+  <h2>Конфиденциальность данных детей</h2>
   <p>
-    Мы не передаём персональные данные третьим лицам, кроме случаев, предусмотренных законом.
+    Приложение не предназначено для детей младше 13 лет и не собирает сознательно персональные данные детей.
   </p>
 
-  <h2>6. Хранение и безопасность</h2>
+  <h2>Ссылки на другие сайты</h2>
   <p>
-    Мы применяем разумные меры для защиты данных, которые приложение хранит локально.
-    Пользователь может удалить данные приложения стандартными средствами Android
-    (Настройки → Приложения → I-Fredom → Память → Очистить).
+    Сервис может содержать ссылки на сторонние сайты. Мы не контролируем и не несём ответственности за содержание,
+    политику конфиденциальности или действия сторонних сайтов и сервисов. Рекомендуем ознакомиться с их политиками.
   </p>
 
-  <h2>7. Дети</h2>
+  <h2>Изменения в настоящей Политике конфиденциальности</h2>
   <p>
-    Приложение не предназначено для детей младше 13 лет и не собирает сознательно данные детей.
+    Мы можем время от времени обновлять эту Политику. Рекомендуем периодически проверять эту страницу.
+    Изменения вступают в силу сразу после публикации.
   </p>
 
-  <h2>8. Изменения политики</h2>
-  <p>
-    Мы можем обновлять эту политику. Актуальная версия всегда доступна на этой странице.
-  </p>
-
-  <h2>9. Контакты</h2>
+  <h2>Контакты</h2>
   <p>Email для связи: <a href="mailto:sup.ifreedom@gmail.com">sup.ifreedom@gmail.com</a></p>
 </main>
 </body>
